<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.Trancation.DetailsTrancationActivity">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="360dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:background="@drawable/details_border"
            android:src="@drawable/design1" />

        <RelativeLayout
            android:id="@+id/tbMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            android:minHeight="?attr/actionBarSize"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:background="@drawable/border"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_toEndOf="@+id/back"
                android:fontFamily="@font/lexenddeca_bold"
                android:gravity="center"
                android:text="@string/edit_transaction"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tbMenu"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:gravity="start"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_total_balance"
                style="@style/EditTextNoUnderline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/lexenddeca_regular"
                android:gravity="center"
                android:letterSpacing="0.050"
                android:text="@string/_10000"
                android:textColor="#FFF"
                android:textSize="50.0sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexenddeca_medium"
                android:gravity="center"
                android:letterSpacing="0.03"
                android:text="@string/salary_for_march"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="18.0sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edit_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextNoUnderline"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/lexenddeca_medium"
                android:gravity="center"
                android:text="@string/sunday_15_march_2022"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="12.0sp" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/border5"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/title2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lexenddeca_medium"
                    android:gravity="center"
                    android:text="@string/type"
                    android:textColor="#91919F"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lexenddeca_medium"
                    android:gravity="center"
                    android:text="@string/category"
                    android:textColor="#91919F"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lexenddeca_medium"
                    android:gravity="center"
                    android:text="@string/time"
                    android:textColor="#91919F"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/title2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/edit_type"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lexenddeca_bold"
                    android:gravity="center"
                    android:text="@string/income"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/edit_category"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lexenddeca_bold"
                    android:gravity="center"
                    android:text="@string/salary"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/edit_time"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lexenddeca_bold"
                    android:gravity="center"
                    android:text="10:30 PM"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@+id/title"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:gravity="center"
        android:text="@string/a"
        android:textColor="#E3E5E5"
        android:textSize="20sp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="85dp"
        android:fillViewport="true"
        android:layout_below="@+id/txt1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexenddeca_semibold"
                    android:text="@string/description"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/edit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/lexenddeca_medium"
                    android:text="@string/amet_minim_mollit_non_deserunt_ullamcoest_sit_aliqua_dolor_do_amet_sint_velit_officia_consequat_duis_enim_velit_mollit_exercitation_veniam_consequat_sunt_nostrud_amet"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title3"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lexenddeca_semibold"
                    android:text="@string/attachment"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:id="@+id/edit_addAttachment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ex1" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/edit_details_transaction"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border2"
        android:fontFamily="@font/lexenddeca_regular"
        android:gravity="center"
        android:text="@string/continue1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="@null" />
</RelativeLayout>